@@ -47,10 +47,11 @@ def parse_cmdline_options(arglist):
 		  "file-to-restore=", "force", "full", "incremental",
 		  "include=", "include-filelist=", "include-filelist-stdin",
 		  "include-globbing-filelist=", "include-regexp=",
-		  "list-current-files", "no-print-statistics",
-		  "null-separator", "remove-older-than=", "restore-dir=",
-		  "restore-time=", "scp-command=", "short-filenames",
-		  "sign-key=", "ssh-command=", "verbosity=", "verify"])
+		  "list-current-files", "no-encryption",
+		  "no-print-statistics", "null-separator",
+		  "remove-older-than=", "restore-dir=", "restore-time=",
+		  "scp-command=", "short-filenames", "sign-key=",
+		  "ssh-command=", "verbosity=", "verify"])
 	except getopt.error, e:
 		command_line_error("%s" % (str(e),))
 
@@ -84,6 +85,7 @@ def parse_cmdline_options(arglist):
 			select_files.append(sys.stdin)
 		elif opt == "-i" or opt == "--incremental": globals.incremental = 1
 		elif opt == "--list-current-files": list_current = 1
+		elif opt == "--no-encryption": globals.encryption = 0
 		elif opt == "--no-print-statistics": globals.print_statistics = 0
 		elif opt == "--null-separator": globals.null_separator = 1
 		elif opt == "-r" or opt == "--file-to-restore":
